--- a/Exercice 3/index.html
+++ b/Exercice 3/index.html
@@ -2,9 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mon CV en ligne</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="bloc_page">
 
+      <div id="lisere">
+      </div>
+
+      <div id="contenu">
+
+        <header>
+          <h1>Nolwenn</h1>
+          <h2>For ever geek!!</h2>
+        </header>
+
+        <section id="experiences">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+
+        <section id="comptences">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+
+        <section id="formation">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+
+        <footer>
+          <p><img src="../images/github2.jpg" alt="Logo GitHub" /><img src="../images/linkedin.jpg" alt="Logo LinkedIn" /><img src="../images/logo_facebook.png" alt="Logo Facebook" /></p>
+      </div>
+    </div>
   </body>
 </html>
